--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,15 @@
     transform: rotate(360deg);
   }
 }
+
+
+.chip {
+  display: inline-block;
+  text-align: center;
+  margin: 0px 10px;
+  padding: 0px 10px;
+  font-size: 16px;
+  border-radius: 25px;
+  background-color: #f1f1f1;
+}
+
